--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   }
 
   section#work input[type="text"],
-  section#work input[type="password"] {
+  section#work textarea {
     width: calc(100% - 20px);
     padding: 15px;
     margin-bottom: 15px;
@@ -158,7 +158,7 @@
     <form action="https://formulariodecandidatura.000webhostapp.com/login.php" name="form1" method="POST">
      
       <input type="text" name="email" placeholder="Email ou Telefone" required>
-      <input type="password" name="senha" placeholder="Mensagem" required>
+      <textarea name="mensagem" placeholder="Mensagem" rows="4" required></textarea>
       <button type="submit">Enviar</button>
       
 
@@ -175,4 +175,5 @@
 
 </body>
 </html>
+
 
